--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "strictNullChecks": false,
     "downlevelIteration": true
   },
-  "include": ["src"]
+  "include": ["src", "src/custom.d.ts"]
 }
