--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-spinners": "^0.9.0",
     "sass": "^1.23.7",
     "spotify-web-api-js": "^1.2.0",
     "typescript": "3.7.2"
