--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mzbrandl.github.io/spotify-playlist-combiner/",
+  "homepage": "https://spotitools.com/",
   "dependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
